--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vite-plugin-wasm": "^3.3.0",
+    "vite-plugin-wasm-pack": "^0.1.12"
   }
 }
