--- a/sandy-rs/Cargo.toml
+++ b/sandy-rs/Cargo.toml
@@ -7,5 +7,25 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[features]
+default = ["console_error_panic_hook"]
+
 [dependencies]
 wasm-bindgen = "0.2.90"
+rand = {version = "0.8.5", features = [ "small_rng" ]}
+cfg-if = "0.1.7"
+
+console_error_panic_hook = { version = "0.1.6", optional = true }
+
+
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+opt-level = 3
+lto = true
+
+[dependencies.getrandom]
+features = [
+    "js",
+]
